# puzzle

./: .gitignore  Cargo.toml  LICENSE  README.md  run.toml
.github/workflows/: check.yml  compile.yml  deploy.yml  push.yml  test.yml
apps/dev/: Cargo.toml
apps/dev/src/: lib.rs
common/: Cargo.toml  build.rs
common/src/: lib.rs
glue/: README.md
glue/common/common/src/: lib.rs
glue/fakewasi/: README.md
glue/fakewasi/fakewasi/: Cargo.toml
glue/id/: README.md
glue/id/common/: Cargo.toml
glue/id/common/src/: lib.rs
glue/id/id/: Cargo.toml
glue/id/id/src/: lib.rs
glue/id/runtime/: Cargo.toml
glue/id/runtime/src/: lib.rs
glue/id/wasm/: Cargo.toml
glue/id/wasm/src/: lib.rs
glue/log/: README.md
glue/log/log/: Cargo.toml
glue/log/log/src/: lib.rs
glue/log/runtime/: Cargo.toml
glue/log/runtime/src/: lib.rs
glue/log/wasm/: Cargo.toml
jigsaw/: Cargo.toml
jigsaw/jigsaw/: Cargo.toml
jigsaw/jigsaw/src/: init.rs  wasm.rs
jigsaw/src/: init.rs  lib.rs  wasm.rs
net/: README.md
net/client/: Cargo.toml
net/client/examples/: client.rs  connect.rs
net/client/src/: lib.rs
net/common/: Cargo.toml
net/common/src/: lib.rs  shared.rs  to_client.rs  to_server.rs
net/server/: Cargo.toml
net/server/src/: main.rs
runners/common/: Cargo.toml
runners/common/src/: lib.rs  stdlib.rs  tests.rs  wasm_trait.rs
runners/desktop/: Cargo.toml
runners/desktop/src/: main.rs
runners/wasm_trait/: Cargo.toml
runners/wasm_trait/src/: lib.rs
runners/wasmtime_common/: Cargo.toml
runners/wasmtime_common/src/: lib.rs
runners/wasmtime_common/src/stdlib/: mod.rs
runners/web/: Cargo.toml  index.html
runners/web/src/: main.rs
sdk/: api.md
sdk/jigsaw_sdk/: Cargo.toml
sdk/jigsaw_sdk/src/: lib.rs
sdk/puzzle_sdk_log/: Cargo.toml
sdk/puzzle_sdk_log/src/: lib.rs
server/deploy/: deploy.sh
utils/cli/bash/: Cargo.toml
utils/cli/bash/src/: lib.rs
utils/deploy/: README.md
utils/deploy/common/: Cargo.toml
utils/deploy/common/src/: lib.rs
utils/deploy/ctl/: Cargo.toml  README.md
utils/deploy/ctl/src/: main.rs
utils/deploy/d/: Cargo.toml  README.md
utils/deploy/d/src/: main.rs  systemd.rs
utils/fs/: README.md
utils/fs/socketio_client/: Cargo.toml
utils/fs/socketio_common/: Cargo.toml
utils/fs/socketio_common/src/: io_err.rs  lib.rs
utils/fs/socketio_server/: Cargo.toml
utils/fs/socketio_server/src/: lib.rs
utils/fs/trait/: Cargo.toml  README.md
utils/fs/trait/src/: abs.rs  empty.rs  error.rs  file_mount.rs  fs_mount.rs  lib.rs  or.rs  quicksocket.rs  tests.rs
utils/iter/join/: Cargo.toml  README.md
utils/iter/join/src/: lib.rs
utils/iter/quickiter/: Cargo.toml  README.md
utils/iter/quickiter/src/: lib.rs
utils/iter/read_until/: Cargo.toml  README.md
utils/iter/read_until/src/: iter.rs  lib.rs  slice.rs  str.rs  tests.rs
