[workspace]
resolver = "2"
members = [
	"common",
	"runners/*",
	"glue/*/*",
	"utils/*/*",
	"apps/*",
	"net/*",
]

[workspace.dependencies]
puzzle_common = { path =      "./common" }
wasmtime_common = { path =    "./runners/wasmtime_common" }

glue = { path =               "./glue/common/common" }
id = { path =                 "./glue/id/id" }
puzzle_log = { path =         "./glue/log/log" }
fakewasi = { path =           "./glue/fakewasi/fakewasi" }

bash = { path =               "./utils/cli/bash" }
gen_wgl = { path =            "./utils/gen/wgl" }
iter_join = { path =          "./utils/iter/join" }
iter_read_until = { path =    "./utils/iter/read_until" }
quickiter = { path =          "./utils/iter/quickiter" }
fs_trait = { path =           "./utils/fs/trait" }
fs_socketio_common = { path = "./utils/fs/socketio_common" }
fs_socketio_client = { path = "./utils/fs/socketio_client" }

net_common = { path =         "./net/common" }
net_client = { path =         "./net/client" }

wasmtime = "16.0.0"
log = "0.4.20"
thiserror = "1.0.50"
anyhow = "1.0.75"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bincode = "1.3.3"
simple_logger = "4.3.3"
rust_socketio = "0.4.2"
