[workspace]
resolver = "2"
members = [
	"common",
	"runners/*",
	"glue/*/*",
	"utils/*/*",
	"apps/*",
	"net/*",
]

[workspace.dependencies]
puzzle_common = { path =      "./common" }
wasmtime_common = { path =    "./runners/wasmtime_common" }

glue = { path =               "./glue/common/common" }
id = { path =                 "./glue/id/id" }
puzzle_log = { path =         "./glue/log/log" }

bash = { path =               "./utils/cli/bash" }
iter_join = { path =          "./utils/iter/join" }
iter_read_until = { path =    "./utils/iter/read_until" }
quickiter = { path =          "./utils/iter/quickiter" }
fs_trait = { path =           "./utils/fs/trait", features = ["serde"] }
fs_socketio_common = { path = "./utils/fs/socketio_common" }
deploy_common = { path =      "./utils/deploy/common" }

runners = { path =            "./runners/common" }

net_common = { path =         "./net/common" }

wasmtime = "16.0.0"
log = "0.4.20"
thiserror = "1.0.50"
anyhow = "1.0.75"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
bincode = "1.3.3"
simple_logger = "4.3.3"
rust_socketio = "0.4.2"
clap = { version = "4.4.11", features = ["derive"] }
socketioxide = "0.10.2"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
axum = "0.7"
