[package]
name = "dev"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puzzle_common.workspace = true
log.workspace = true
anyhow.workspace = true
puzzle_log = { workspace = true, features = ["wasm"]}
id = { workspace = true, features = ["wasm"] }
