[package]
name = "net_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
simple_logger.workspace = true
anyhow.workspace = true

[dependencies]
bincode.workspace = true
log.workspace = true
net_common.workspace = true
puzzle_common.workspace = true

rust_socketio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
