[package]
name = "puzzle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
log.workspace = true
pathsearch = "0.2.0"
pretty_env_logger = "0.5.0"
runners.workspace = true
wasmtime_common.workspace = true
