[package]
name = "wasmtime_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
puzzle_log = { workspace = true, features = ["runtime"] }
id = { workspace = true, features = ["runtime"] }
anyhow.workspace = true
log.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
