[package]
name = "deployctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
deploy_common.workspace = true
log.workspace = true
rust_socketio.workspace = true
serde.workspace = true
serde_json.workspace = true
simple_logger.workspace = true
