[package]
name = "deployd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
bash.workspace = true
bincode.workspace = true
clap.workspace = true
copy_dir = "0.1.3"
deploy_common.workspace = true
log.workspace = true
once_cell = "1.19.0"
serde.workspace = true
simple_logger.workspace = true
socketioxide.workspace = true
tokio.workspace = true
